# RAG-pipeline

./: pyproject.toml  requirements.txt
data/text_files/: python.txt
data/vector_store/: chroma.sqlite3
notebook/: document.ipynb
